--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@mdxeditor/editor": "^3.4.1",
     "@mui/icons-material": "^5.15.13",
     "@mui/material": "^5.15.13",
     "@mui/material-nextjs": "^5.15.11",
