--- a/package.json
+++ b/package.json
@@ -16,9 +16,16 @@
     "@mui/icons-material": "^5.15.13",
     "@mui/material": "^5.15.13",
     "@mui/material-nextjs": "^5.15.11",
+    "axios": "^1.7.2",
+    "formik": "^2.4.6",
+    "http-proxy-middleware": "^3.0.0",
     "next": "14.1.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sass": "^1.77.4",
+    "zod": "^3.23.8",
+    "zod-formik-adapter": "^1.3.0",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@types/node": "^20",
