--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.7.2",
     "formik": "^2.4.6",
     "http-proxy-middleware": "^3.0.0",
+    "lottie-react": "^2.4.0",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
