--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_DOMAIN_URL=http://localhost:3000
 NEXT_PUBLIC_GOOGLE_REDIRECT_URL=https://c105-13-115-215-106.ngrok-free.app
+NEXT_PUBLIC_UNSPLASH_CLIENT_ID="SsOq-D7E1wQ1TWdAR9UnbCrzKUOjHu1E5-0eAz9rKzM"
