--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^10.0.0",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1",
     "sass": "^1.77.4",
     "uuid": "^10.0.0",
     "zod": "^3.23.8",
