--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prettier": "prettier . --write"
+    "prettier": "prettier . --write",
+    "tokenTransfer": "node ./tokenTransformer.js"
   },
   "dependencies": {
     "@emotion/cache": "^11.11.0",
