--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 NEXT_PUBLIC_DOMAIN_URL="https://coside-web.zeabur.app"
-NEXT_PUBLIC_API_URL="https://6181-13-115-215-106.ngrok-free.app"
+NEXT_PUBLIC_API_URL="https://583c090012ea.ngrok.app"
 NEXT_PUBLIC_UNSPLASH_CLIENT_ID="SsOq-D7E1wQ1TWdAR9UnbCrzKUOjHu1E5-0eAz9rKzM"
 
