--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/icons-material": "^5.15.13",
     "@mui/material": "^5.15.13",
     "@mui/material-nextjs": "^5.15.11",
+    "@ts-rest/core": "^3.52.1",
     "axios": "^1.7.2",
     "formik": "^2.4.6",
     "http-proxy-middleware": "^3.0.0",
@@ -31,7 +32,7 @@
     "remark-gfm": "^4.0.1",
     "sass": "^1.77.4",
     "uuid": "^10.0.0",
-    "zod": "^3.23.8",
+    "zod": "^3.24.3",
     "zod-formik-adapter": "^1.3.0",
     "zustand": "^4.5.4"
   },
