feat: Use tanstack-query.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@mui/icons-material": "^5.15.13",
     "@mui/material": "^5.15.13",
     "@mui/material-nextjs": "^5.15.11",
+    "@tanstack/react-query": "^5.75.0",
+    "@tanstack/react-query-devtools": "^5.75.0",
+    "@tanstack/react-query-next-experimental": "^5.75.0",
     "@ts-rest/core": "^3.52.1",
     "axios": "^1.7.2",
     "formik": "^2.4.6",
