--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-error-boundary": "^6.0.0",
     "react-markdown": "^10.0.0",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
