--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,17 +4,15 @@
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": false,
-    "strict": false,
+    "strict": true,
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noImplicitAny": true,
     "jsx": "preserve",
     "incremental": true,
-    "strictNullChecks": true,
     "plugins": [
       {
         "name": "next"
